# nataili

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  style.py  style.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: lint.yml  pypi.yml
annotator/: util.py
annotator/hed/: __init__.py
annotator/midas/: __init__.py
annotator/mlsd/: __init__.py
annotator/openpose/: __init__.py  body.py  hand.py
annotator/uniformer/: __init__.py
docs/: README.md  blip.md  clip.md  coca.md  model_manager.md  overview.md
ldm/: util.py
ldm/data/: imagenet.py
ldm/modules/: attention.py
ldm2/: util.py
ldm2/modules/: attention.py
nataili/: __init__.py  cldm_v21.yaml  clip.json  controlnet.json  flavors.txt  mediums.txt  sdu.json  stable_diffusion.json  tags.txt
nataili/aitemplate/: AITemplate.py  __init__.py  model.py
nataili/blip/: __init__.py  caption.py
nataili/cache/: __init__.py  cache.py
nataili/clip/: __init__.py  bulk.py  coca.py  image.py  interrogate.py  text.py
nataili/codeformers/: __init__.py  codeformers.py
nataili/esrgan/: __init__.py  esrgan.py
nataili/gfpgan/: __init__.py  gfpgan.py
nataili/model_manager/: __init__.py  aitemplate.py  base.py  blip.py  clip.py  codeformer.py  compvis.py  controlnet.py  diffusers.py  esrgan.py  gfpgan.py  new.py  safety_checker.py  sdu.py  super.py
nataili/sdu/: __init__.py  sdu.py
nataili/stable_diffusion/: __init__.py  annotation.py  compvis.py  prompt_weights.py
nataili/train/: __init__.py
nataili/util/: __init__.py  cache.py  cast.py  check_prompt_length.py  create_random_tensors.py  get_next_sequence_number.py  image_grid.py  img2img.py  load_learned_embed_in_clip.py  load_list.py  logger.py  lora.py  monitor.py  normalized.py  save_sample.py  (+5 more)
scripts/: bulk_image_embeds.py  bulk_image_embeds_webdataset.py  download_all_stable_diffusion_models.py  highlow.py  sdu.py  standard_compvis.sh  test.html  test_ait.py  test_all_models.py  test_blip.py  test_clip_rank.py  test_clip_similarity.py  test_coca.py  test_codeformers.py  test_compvis.py  test_compvis_inpainting.py  test_control.py  test_control_voodoo.py  test_controlnet.py  test_controlnet_canny.py  test_controlnet_depth.py  test_controlnet_hed.py  test_controlnet_hough.py  test_controlnet_normal.py  test_controlnet_openpose.py  test_controlnet_seg.py  test_depth2img.py  test_dreambooth_lora.py  test_esrgan.py  test_file_hashes.py  test_gfpgan.py  test_img2img.py  test_img2img_voodoo.py  test_inpainting.py  test_pix2pix.py  test_pix2pix_voodoo.py  test_safety_checker.py  test_sd2.py  test_txt2img.py  test_txt2img_hires.py  (+2 more)
tests/: prompt_weights.py
(+68 files in other folders)
