[tool.black]
line-length = 119

[tool.isort]
py_version = 38
line_length = 119
profile = "black"
known_third_party = ["wandb"]

[tool.pylint.FORMAT]
max-line-length=500

[tool.ruff]
line-length = 500

[build-system]
requires = ["setuptools>=64.0", "pip>=20.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nataili"
version = "0.2.9018"
authors = [
    { name="hlky", email="goto@github.com" },
]
description = "Nataili: Multimodal AI Python Library"
readme = "README.md"
license = { file="LICENSE" }
dynamic = ["dependencies"]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Sygil-Dev/nataili"
"Bug Tracker" = "https://github.com/Sygil-Dev/nataili/issues"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages]
find = {}

[options.index-client]
extra-index-urls = [    "https://download.pytorch.org/whl/cu117"]

[project.scripts]
nataili_ui_coca = "nataili.ui.gradio.coca:main"
nataili_ui_blip = "nataili.ui.gradio.blip:main"
nataili_ui_codeformer = "nataili.ui.gradio.codeformer:main"
