[flake8]
max-line-length = 119
extend-ignore = E203,F405,F403

[isort]
multi_line_output = 3
include_trailing_comma = True
line_length = 119

[metadata]
name = nataili
version = "v0.3.1"

[options.package_data]
nataili = *.json, *.txt, *.yaml

[easy_install]
index_url = https://pypi.org/simple
extra_index_url = https://download.pytorch.org/whl/cu117
